; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/wpa/wpa_supplicant/extr_Packet32.c_pcap_inject.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/wpa/wpa_supplicant/extr_Packet32.c_pcap_inject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifreq = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"/dev/bpf%d\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i64 0, align 8
@BIOCGETIF = common dso_local global i32 0, align 4
@BIOCSETIF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pcap_inject(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [19 x i8], align 16
  %12 = alloca %struct.ifreq, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 0, i32* %10, align 4
  br label %13

13:                                               ; preds = %28, %3
  %14 = getelementptr inbounds [19 x i8], [19 x i8]* %11, i64 0, i64 0
  %15 = load i32, i32* %10, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %10, align 4
  %17 = call i32 @snprintf(i8* %14, i32 19, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %15)
  %18 = getelementptr inbounds [19 x i8], [19 x i8]* %11, i64 0, i64 0
  %19 = load i32, i32* @O_RDWR, align 4
  %20 = call i32 @open(i8* %18, i32 %19)
  store i32 %20, i32* %8, align 4
  br label %21

21:                                               ; preds = %13
  %22 = load i32, i32* %8, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %21
  %25 = load i64, i64* @errno, align 8
  %26 = load i64, i64* @EBUSY, align 8
  %27 = icmp eq i64 %25, %26
  br label %28

28:                                               ; preds = %24, %21
  %29 = phi i1 [ false, %21 ], [ %27, %24 ]
  br i1 %29, label %13, label %30

30:                                               ; preds = %28
  %31 = load i32, i32* %8, align 4
  %32 = icmp eq i32 %31, -1
  br i1 %32, label %33, label %34

33:                                               ; preds = %30
  store i32 -1, i32* %4, align 4
  br label %53

34:                                               ; preds = %30
  %35 = bitcast %struct.ifreq* %12 to i8*
  %36 = call i32 @bzero(i8* %35, i32 4)
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @pcap_fileno(i32* %37)
  %39 = load i32, i32* @BIOCGETIF, align 4
  %40 = ptrtoint %struct.ifreq* %12 to i32
  %41 = call i32 @ioctl(i32 %38, i32 %39, i32 %40)
  %42 = load i32, i32* %8, align 4
  %43 = load i32, i32* @BIOCSETIF, align 4
  %44 = ptrtoint %struct.ifreq* %12 to i32
  %45 = call i32 @ioctl(i32 %42, i32 %43, i32 %44)
  %46 = load i32, i32* %8, align 4
  %47 = load i8*, i8** %6, align 8
  %48 = load i64, i64* %7, align 8
  %49 = call i32 @write(i32 %46, i8* %47, i64 %48)
  store i32 %49, i32* %9, align 4
  %50 = load i32, i32* %8, align 4
  %51 = call i32 @close(i32 %50)
  %52 = load i32, i32* %9, align 4
  store i32 %52, i32* %4, align 4
  br label %53

53:                                               ; preds = %34, %33
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @ioctl(i32, i32, i32) #1

declare dso_local i32 @pcap_fileno(i32*) #1

declare dso_local i32 @write(i32, i8*, i64) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
